@@ -1,3 +1,15 @@
+Wed Oct 29 12:15:35 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tao/IIOP_Transport.cpp: Cosmetic fix.
+	
+	* tao/Strategies/SCIOP_Endpoint.cpp:
+	* tao/Strategies/SCIOP_Endpoint.h:
+	* tao/Strategies/SCIOP_Factory.h:
+	* tao/Strategies/SCIOP_Transport.cpp: 
+          
+	  Fixes for the compilation errors in lksctp build. Since I have o
+	  clue on what the problem could be, this is just a guess. 
+
 Wed Oct 29 12:09:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * tao/DynamicInterface/DynamicInterface.mpc:
